--- a/Titanic_Case_Study.ipynb
+++ b/Titanic_Case_Study.ipynb
@@ -878,9 +878,13 @@
     "sex_ratio =[minors,male_count,female_count]\n",
     "plt.pie(sex_ratio,labels=['Child','Male','Female'],colors =['lightcoral','skyblue','teal'],autopct ='%1.1f%%',shadow =True,startangle=140,explode =[0.0,0.0,0.1])\n",
     "plt.title('Sex Ratio')\n",
-    "plt.show()\n",
-    "plt.savefig('Sex_ratio.png')"
+    "plt.savefig('Sex_ratio.png')",
+    "plt.show()/n"
+
+    
+
    ]
+
   },
   {
    "cell_type": "code",
