--- a/Titanic_Case_Study.ipynb
+++ b/Titanic_Case_Study.ipynb
@@ -879,7 +879,7 @@
     "plt.pie(sex_ratio,labels=['Child','Male','Female'],colors =['lightcoral','skyblue','teal'],autopct ='%1.1f%%',shadow =True,startangle=140,explode =[0.0,0.0,0.1])\n",
     "plt.title('Sex Ratio')\n",
     "plt.savefig('Sex_ratio.png')",
-    "plt.show()/n"
+    "plt.show()/n",
 
     
 
